[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/MatchPreparation.gd" type="Script" id=1]
[ext_resource path="res://resources/assets/fundo-pedras.png" type="Texture" id=2]
[ext_resource path="res://resources/Antonio-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/MatchTop.gd" type="Script" id=4]
[ext_resource path="res://resources/assets/menu-geral.png" type="Texture" id=5]
[ext_resource path="res://resources/Antonio-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://resources/assets/botao-pausa.png" type="Texture" id=7]
[ext_resource path="res://resources/assets/botao-pausa-ativo.png" type="Texture" id=8]
[ext_resource path="res://resources/instances/PopupQuit.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 28
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 3 )

[node name="Node" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BG" type="Control" parent="."]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0

[node name="fundo-dia" type="Sprite" parent="BG"]
texture = ExtResource( 2 )
centered = false

[node name="Class" type="Control" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 158.0

[node name="ClassSymbol" type="ColorRect" parent="Class"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -213.0
margin_top = 45.0
margin_right = -173.0
margin_bottom = 85.0

[node name="ClassName" type="Label" parent="Class"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -155.0
margin_top = 40.0
margin_right = 223.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.94902, 0.901961, 1 )
text = "Nome da classe"
valign = 1

[node name="ClassDescription" type="Label" parent="Class"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -210.0
margin_top = 105.0
margin_right = 223.0
margin_bottom = 614.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.94902, 0.901961, 1 )
text = "Descrição da classe."
align = 3
autowrap = true

[node name="Top" type="Control" parent="."]
editor/display_folded = true
anchor_right = 1.0
margin_bottom = 231.0
script = ExtResource( 4 )

[node name="Background" type="ColorRect" parent="Top"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.431373, 0.431373, 0.431373, 1 )

[node name="BG" type="Control" parent="Top"]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0

[node name="Sprite" type="Sprite" parent="Top/BG"]
texture = ExtResource( 5 )
centered = false

[node name="TimeDay" type="Control" parent="Top"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Timer" type="Control" parent="Top/TimeDay"]
margin_left = 25.0
margin_top = 26.0
margin_right = 105.0
margin_bottom = 105.0

[node name="ColorRect" type="ColorRect" parent="Top/TimeDay/Timer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.921569, 0.921569, 0.921569, 1 )

[node name="Label" type="Label" parent="Top/TimeDay/Timer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -33.0
margin_top = -30.5
margin_right = 33.0
margin_bottom = 38.5
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.145098, 0.137255, 0.117647, 1 )
text = "30"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="Top/TimeDay/Timer"]

[node name="Day" type="Control" parent="Top/TimeDay"]
editor/display_folded = true
margin_left = 142.0
margin_top = 8.0
margin_right = 230.0
margin_bottom = 117.0

[node name="ColorRect" type="ColorRect" parent="Top/TimeDay/Day"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.921569, 0.921569, 0.921569, 1 )

[node name="Label" type="Label" parent="Top/TimeDay/Day"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -14.5
margin_right = 20.0
margin_bottom = 14.5
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.294118, 0.223529, 0.129412, 1 )
text = "Dia 1"
align = 1
valign = 1

[node name="CurrentPhase" type="Label" parent="Top"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -324.0
margin_top = 29.0
margin_right = -98.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.294118, 0.223529, 0.129412, 1 )
text = "Descubra sua classe"
align = 2
valign = 1

[node name="NextPhase" type="Label" parent="Top"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -331.0
margin_top = 61.0
margin_right = -98.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.294118, 0.223529, 0.129412, 1 )
text = "Noite"
align = 2
valign = 1

[node name="PauseBtn" type="TextureButton" parent="Top"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -91.0
margin_top = 18.0
margin_right = -5.0
margin_bottom = 105.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )

[node name="NameLabel" type="Label" parent="Top"]
margin_left = 6.0
margin_top = 135.0
margin_right = 195.0
margin_bottom = 159.0
custom_colors/font_color = Color( 0.168627, 0.168627, 0.168627, 1 )
text = "Nome"
align = 1
valign = 1

[node name="PopupQuit" parent="." instance=ExtResource( 9 )]
visible = false
[connection signal="timeout" from="Top/TimeDay/Timer/Timer" to="Top" method="_on_Timer_timeout"]
[connection signal="pressed" from="Top/PauseBtn" to="Top" method="_on_PauseBtn_pressed"]
